Sun May 10 20:53:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/schema.py: Add templates to schema.

Sat May 09 16:36:31 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/controller.py: ( not [

Sat May 09 11:42:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst,flax/searchserver/application.py: Add version prefix.

Sat May 09 08:17:43 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/xappy_backend.py: Remove unwanted
          parameters, which were added by mistake.

Fri May 08 23:30:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/base_backend.py,
	  flax/searchserver/backends/xappy_backend.py: Bring these two
	  in-line with each other, and move some things which are generic
	  into the base class.

Tue May  5 14:41:15 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * runserver.py: Added option to change data directory.
    * flax/searchserver/backends/xappy_backend.py: Reduced queue size
      to 1000, to keep memory usage down.

Fri May  1 14:07:23 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flax/searchserver/application.py,
    * flax/searchserver/backends/xappy_backend.py: Re-implemented 
      structured search (was search/json) using GET. Added code to
      process all search params.      

Fri May  1 10:19:16 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    
    * docs/api.rst: Added a note about search.
    * flax/searchserver/application.py,
    * flax/searchserver/backends/xappy_backend.py: Changes to search
      param names.

Thu Apr 30 23:54:11 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Various updates to catch up with the code, and some
	  notes about some of the new stuff.

Thu Apr 30 17:28:12 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * docs/api.rst: Added paragraph about JSON search.